[package]
name = "feedforward"
version = "0.1.0"
authors = ["Rafael Rondao <rafael.rondao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.1"
ndarray-rand = "0.14.0"
plotters = "0.3"
rand = "0.8.3"